// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HashMap renders array value 1`] = `
<dl
  class="css-yjq8nq"
  data-cy="configurationMapSection"
>
  <div
    class="css-1afpcs7"
    data-cy="configurationMapRow"
  >
    <dt
      class="css-n8bfbv"
      data-cy="configurationMapLabel"
    >
      foo
    </dt>
    <dd
      class="css-rhtsr1"
      data-cy="configurationMapValue"
    >
      foo, bar, baz
    </dd>
  </div>
</dl>
`;

exports[`HashMap renders boolean value 1`] = `
<dl
  class="css-yjq8nq"
  data-cy="configurationMapSection"
>
  <div
    class="css-1afpcs7"
    data-cy="configurationMapRow"
  >
    <dt
      class="css-n8bfbv"
      data-cy="configurationMapLabel"
    >
      foo
    </dt>
    <dd
      class="css-rhtsr1"
      data-cy="configurationMapValue"
    >
      true
    </dd>
  </div>
</dl>
`;

exports[`HashMap renders default 1`] = `
<dl
  class="css-yjq8nq"
  data-cy="configurationMapSection"
>
  <div
    class="css-1afpcs7"
    data-cy="configurationMapRow"
  >
    <dt
      class="css-n8bfbv"
      data-cy="configurationMapLabel"
    >
      foo
    </dt>
    <dd
      class="css-rhtsr1"
      data-cy="configurationMapValue"
    >
      bar
    </dd>
  </div>
</dl>
`;

exports[`HashMap renders empty value 1`] = `
<dl
  class="css-yjq8nq"
  data-cy="configurationMapSection"
>
  <div
    class="css-1afpcs7"
    data-cy="configurationMapRow"
  >
    <dt
      class="css-n8bfbv"
      data-cy="configurationMapLabel"
    >
      foo
    </dt>
    <dd
      class="css-rhtsr1"
      data-cy="configurationMapValue"
    >
      empty
    </dd>
  </div>
</dl>
`;

exports[`HashMap renders with a headline 1`] = `
<dl
  class="css-yjq8nq"
  data-cy="configurationMapSection"
>
  <div
    class="css-4p29as"
    data-cy="configurationMapHeading"
  >
    <h1
      class="rmMargins css-ipvdfg"
      data-cy="headingText1"
    >
      baz
    </h1>
  </div>
  <div
    class="css-1afpcs7"
    data-cy="configurationMapRow"
  >
    <dt
      class="css-n8bfbv"
      data-cy="configurationMapLabel"
    >
      foo
    </dt>
    <dd
      class="css-rhtsr1"
      data-cy="configurationMapValue"
    >
      bar
    </dd>
  </div>
</dl>
`;

exports[`HashMap renders with nested object hash 1`] = `
<dl
  class="css-yjq8nq"
  data-cy="configurationMapSection"
>
  <dl
    class="css-yjq8nq"
    data-cy="configurationMapSection"
  >
    <div
      class="css-4p29as"
      data-cy="configurationMapHeading"
    >
      <h2
        class="rmMargins css-1jlnqz6"
        data-cy="headingText2"
      >
        foo
      </h2>
    </div>
    <div
      class="css-1afpcs7"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-n8bfbv"
        data-cy="configurationMapLabel"
      >
        bar
      </dt>
      <dd
        class="css-rhtsr1"
        data-cy="configurationMapValue"
      >
        baz
      </dd>
    </div>
  </dl>
</dl>
`;
